@@ -1,11 +1,11 @@
 plugins {
 	id 'java'
 	id 'io.quarkus'
-	id "io.freefair.lombok" version "6.6.1"
+	id "io.freefair.lombok" version "6.6.2"
 }
 
 group 'com.ebp.openQuarterMaster'
-version '1.0.19-DEV'
+version '1.0.19-4-DEV'
 
 repositories {
 	mavenCentral()
@@ -32,16 +32,16 @@ dependencies {
 	implementation 'io.quarkus:quarkus-hibernate-validator'
 	implementation 'io.quarkus:quarkus-elytron-security'
 	implementation 'io.quarkus:quarkus-micrometer-registry-prometheus'
-	implementation 'io.quarkus:quarkus-container-image-docker'
+	implementation 'io.quarkus:quarkus-container-image-jib'
 	implementation 'io.quarkus:quarkus-rest-client'
 	implementation 'io.quarkus:quarkus-rest-client-jackson'
 	implementation 'io.quarkus:quarkus-mailer'
 	implementation 'io.quarkus:quarkus-scheduler'
 	implementation 'io.opentracing.contrib:opentracing-mongo-common'
 
-	implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'
+	implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.4'
 
-	implementation 'com.itextpdf:html2pdf:4.0.4'
+	implementation 'com.itextpdf:html2pdf:4.0.5'
 
 	// https://quarkus.io/guides/logging
 	implementation 'org.jboss.slf4j:slf4j-jboss-logmanager'
@@ -53,12 +53,12 @@ dependencies {
 //    implementation 'org.webjars:js-cookie:2.2.1' //out of date
 //    implementation 'org.webjars:spin-js:2.1.0'
 
-	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-core:1.0.58-SNAPSHOT'
-	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-moduleDriver:1.0.1-DEV'
+	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-core:1.0.58-7-SNAPSHOT'
+	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-moduleDriver:1.0.2-DEV'
 
 	// https://mvnrepository.com/artifact/tech.units/indriya
 	//     https://unitsofmeasurement.gitbook.io/uom-guide/getting-started/getting-started-with-indriya
-	implementation 'tech.units:indriya:2.1.3'
+	implementation 'tech.units:indriya:2.1.4'
 	implementation 'systems.uom:systems-common:2.1'
 	// https://mvnrepository.com/artifact/tech.uom.lib/uom-lib-jackson
 	implementation 'tech.uom.lib:uom-lib-jackson:2.1'
@@ -78,19 +78,19 @@ dependencies {
 	testImplementation 'org.testcontainers:mongodb:1.17.6'
 	testImplementation 'com.github.dasniko:testcontainers-keycloak:1.9.0'
 	//2.1.2 seems dud, fails to start & null pointers
-	testImplementation 'org.keycloak:keycloak-admin-client:16.1.1'
+	testImplementation 'org.keycloak:keycloak-admin-client:20.0.4'
 	// 17.0.1 seems dud, might be related to keycloak issue
 	testImplementation 'io.jaegertracing:jaeger-testcontainers:0.7.0'
-	testImplementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
+	testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
 	testImplementation 'org.testcontainers:selenium:1.17.6'
 	testImplementation 'com.deque:axe-selenium:3.0'
-	testImplementation 'net.datafaker:datafaker:1.7.0'
+	testImplementation 'net.datafaker:datafaker:1.8.0'
 }
 
 java {
 	java {
 		toolchain {
-			languageVersion.set(JavaLanguageVersion.of(11))
+			languageVersion.set(JavaLanguageVersion.of(17))
 		}
 	}
 }
@@ -107,7 +107,12 @@ compileTestJava {
 test {
 	minHeapSize = "128m" // initial heap size
 	maxHeapSize = "1g" // maximum heap size
-//	jvmArgs '-XX:MaxPermSize=1g' // mem argument for the test JVM //no worky with j17
+	jvmArgs(
+		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
+		"--add-opens", "java.base/java.io=ALL-UNNAMED",
+		"--add-opens", "java.base/java.util=ALL-UNNAMED",
+		"--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
+	)
 }
 
 /**
